<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_layout"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/left_up_image"
        android:layout_width="134dp"
        android:layout_height="194dp"
        android:contentDescription="@string/description_left_up_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_forth" />

    <ImageView
        android:id="@+id/left_bottom_image"
        android:layout_width="145dp"
        android:layout_height="142dp"
        android:contentDescription="@string/description_left_bottom_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cat_one" />

    <ImageView
        android:id="@+id/right_up_image"
        android:layout_width="147dp"
        android:layout_height="187dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/description_right_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cat_three" />

    <ImageView
        android:id="@+id/right_bottom_image"
        android:layout_width="182dp"
        android:layout_height="344dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/description_right_bottom_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cat_two" />

    <TextView
        android:id="@+id/first_text"
        android:layout_width="151dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        android:text="@string/first_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"

        app:layout_constraintEnd_toStartOf="@+id/right_up_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/left_up_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="138dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:singleLine="false"
        android:text="@string/second_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"

        app:layout_constraintEnd_toStartOf="@+id/right_up_image"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/left_up_image"
        app:layout_constraintTop_toBottomOf="@+id/left_up_image" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="47dp" />


    <TextView
        android:id="@+id/third_text"
        android:layout_width="181dp"
        android:layout_height="101dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        android:lines="3"
        android:text="@string/third_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"

        app:layout_constraintBottom_toTopOf="@+id/forth_text"
        app:layout_constraintEnd_toEndOf="@+id/left_bottom_image"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/forth_text"
        android:layout_width="262dp"
        android:layout_height="88dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:singleLine="false"
        android:text="@string/forth_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>